# mbird

./: .gitignore  Makefile  README.md  pyproject.toml
console/: Makefile  pyproject.toml  run_console.sh
console/frontend/: index.html  package.json
console/frontend/src/: App.jsx  index.css
console/frontend/src/components/: DirectoryBrowser.jsx  GraphEditor.jsx  ProjectDialog.jsx  TreeNode.jsx  TreeView.jsx
console/src/mbird_console/: config.py  config_test.py  graph_loader.py  main.py
console/src/mbird_console/api/: routes.py  routes_test.py
data/: Makefile  pyproject.toml
data/src/mbird_data/: __init__.py  constants.py  data.py  data_test.py  models.py  tree.py
mbird_console/: Makefile  pyproject.toml
mbird_console/frontend/src/: App.jsx
mbird_console/src/mbird_console/api/: routes.py
