[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mbird-data"
version = "0.1.0"
description = "Core data structures for mbird"
requires-python = ">=3.10, <4"
dependencies = [
    "pydantic>=2.12, <3",
]

[project.optional-dependencies]
dev = [
    "mypy",
    "ruff",
]
test = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mbird_data = ["py.typed"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
]
ignore = ["SIM108"]  # Allow if-else over ternary for readability

[tool.ruff.lint.isort]
force-single-line = false
force-sort-within-sections = true
known-first-party = ["mbird_data"]
