[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mbird-console"
version = "0.1.0"
description = "Browser-based console for mbird graph editing"
requires-python = ">=3.10, <4"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "mypy",
    "ruff",
]
test = [
    "pytest",
    "httpx",  # for testing FastAPI
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
]
ignore = ["SIM108"]  # Allow if-else over ternary for readability

[tool.ruff.lint.isort]
force-single-line = false
force-sort-within-sections = true
known-first-party = ["mbird_console"]
